[SITE] Background change
by [Dara Keon (Ísis)] in [2016-05-23 18:36:20 (-03:00)]

--- a/Site/Presentation/Presentation.csproj
+++ b/Site/Presentation/Presentation.csproj
@@ -175,19 +175,13 @@
     <Content Include="Assets\css\screen_Site.css" />
     <Content Include="Assets\css\Season.css" />
     <Content Include="Assets\images\arms.gif" />
-    <Content Include="Assets\images\background\01.jpg" />
-    <Content Include="Assets\images\background\02.jpg" />
-    <Content Include="Assets\images\background\03.jpg" />
-    <Content Include="Assets\images\background\04.jpg" />
-    <Content Include="Assets\images\background\05.jpg" />
-    <Content Include="Assets\images\background\06.jpg" />
-    <Content Include="Assets\images\background\07.jpg" />
     <Content Include="Assets\images\boxes\dark_background.jpg" />
     <Content Include="Assets\images\boxes\green_background.jpg" />
     <Content Include="Assets\images\boxes\light_background.jpg" />
     <Content Include="Assets\images\boxes\red_background.jpg" />
     <Content Include="Assets\images\boxes\yellow_background.jpg" />
     <Content Include="Assets\images\favicon.png" />
+    <Content Include="Assets\images\fundo.png" />
     <Content Include="Assets\images\logo.png" />
     <Content Include="Assets\images\next.gif" />
     <Content Include="Assets\images\prev.gif" />
