--- a/Site/Presentation/Web.config
+++ b/Site/Presentation/Web.config
@@ -4,10 +4,10 @@
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="Stories" value="..\..\..\..\..\Dara\MEAK\Stories\" />
+		<add key="Stories" value="..\..\..\Stories\" />
 		<add key="Messages" value="Messages" />
-		<add key="CountdownStart" value="27/03"/>
-		<add key="CountdownFrequency" value="14"/>
+		<add key="CountdownStart" value="27/03" />
+		<add key="CountdownFrequency" value="14" />
 
 		<add key="aspnet:MaxHttpCollectionKeys" value="5000" />
 	</appSettings>
