--- a/Site/Presentation/Web.config
+++ b/Site/Presentation/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
@@ -13,8 +13,8 @@
 	</appSettings>
 
 	<system.web>
-		<compilation debug="true" targetFramework="4.0">
-			<assemblies />
+		<compilation debug="true" targetFramework="4.7">
+			<assemblies/>
 		</compilation>
 		<authentication mode="Forms">
 			<forms loginUrl="~/" timeout="2880" />
