[SITE] error-handling: throw error when is author

--- a/Site/Presentation/Web.config
+++ b/Site/Presentation/Web.config
@@ -29,7 +29,7 @@
 				<add namespace="System.Web.WebPages" />
 			</namespaces>
 		</pages>
-		<customErrors mode="Off" />
+		<customErrors mode="RemoteOnly" />
 		<globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" culture="pt-BR" uiCulture="pt-BR" />
 	</system.web>
 	
