translator: add first implementation
Translates a text written in a simpler format to json format that the
site expects

--- a/translator/Translator.csproj
+++ b/translator/Translator.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="8.0.3" />
+    <PackageReference Include="System.Security.Permissions" Version="4.0.0.0" />
+  </ItemGroup>
+
 </Project>
