handle talks starting with dot
On google drive, if you use dash to start talks, it will be replaced by
formatted list.

--- a/translator/config.json
+++ b/translator/config.json
@@ -11,7 +11,7 @@
 				"newValue": ""
 			},
 			{
-				"oldValue": "\n- ?(.*) ([A-Z])",
+				"oldValue": "\n[\\.\\-] ?(.*) ([A-Z])",
 				"newValue": "\ntalk\tdefault\t$2\t$1"
 			},
 			{
