--- a/translator/config.json
+++ b/translator/config.json
@@ -75,6 +75,18 @@
 			{
 				"oldValue": "B",
 				"newValue": "Beleno"
+			},
+			{
+				"oldValue": "Q",
+				"newValue": "Aqua"
+			},
+			{
+				"oldValue": "T",
+				"newValue": "Trinity"
+			},
+			{
+				"oldValue": "R",
+				"newValue": "Rust"
 			}
 		],
 		"verifications": [
