--- a/Site/Presentation/Web.config
+++ b/Site/Presentation/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
@@ -14,7 +14,7 @@
 
 	<system.web>
 		<compilation debug="true" targetFramework="4.7">
-			<assemblies/>
+			<assemblies />
 		</compilation>
 		<authentication mode="Forms">
 			<forms loginUrl="~/" timeout="2880" />
@@ -62,7 +62,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+				<bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
