--- a/Site/Presentation/Web.config
+++ b/Site/Presentation/Web.config
@@ -7,7 +7,8 @@
 		<add key="Stories" value="..\..\..\Stories\" />
 		<add key="Messages" value="Messages" />
 		<add key="CountdownStart" value="27/03" />
-		<add key="CountdownFrequency" value="14" />
+		<add key="EpisodesInterval" value="14" />
+		<add key="EpisodesHiatus" value="35" />
 
 		<add key="aspnet:MaxHttpCollectionKeys" value="5000" />
 	</appSettings>
