[SITE] login: fix place of credentials
Add to file apart, so it can be ignored

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ _ReSharper.*
 Site/Presentation/Presentation.Publish.xml
 Site/Presentation/Properties/PublishProfiles/*
 packages
+
+/Site/Presentation/login.config
