--- a/Site/Presentation/Web.config
+++ b/Site/Presentation/Web.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<appSettings>
+	<appSettings file="login.config">
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
