config: add Dilan

--- a/translator/config.json
+++ b/translator/config.json
@@ -87,6 +87,10 @@
 			{
 				"oldValue": "R",
 				"newValue": "Rust"
+			},
+			{
+				"oldValue": "N",
+				"newValue": "Dilan"
 			}
 		],
 		"verifications": [
