[SITE] publish: fix transform for config
The name of the folder where the stories are on server has changed

--- a/Site/Presentation/Web.Amazon.config
+++ b/Site/Presentation/Web.Amazon.config
@@ -3,7 +3,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 
 	<appSettings>
-		<add key="Stories" value="..\MEAK-XML"
+		<add key="Stories" value="..\meak-json"
 			 xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
 		<add key="Login" xdt:Transform="Remove" xdt:Locator="Match(key)" />
 		<add key="Pass" xdt:Transform="Remove" xdt:Locator="Match(key)" />
