[SITE] route: make it simpler
Using special routes just for public, not for internal edition

--- a/Site/Presentation/Web.config
+++ b/Site/Presentation/Web.config
@@ -39,13 +39,17 @@
 
 		<rewrite>
 			<rules>
-				<rule name="facebook" stopProcessing="true">
-					<match url="^([A-J])([0-9]{2}).meak$" />
-					<action type="Rewrite" url="/§{R:1}[{R:2}][a]" />
+				<rule name="reader-season" stopProcessing="true">
+					<match url="^([A-J]).meak$" />
+					<action type="Rewrite" url="/{R:1}" />
 				</rule>
-				<rule name="facebook_scene" stopProcessing="true">
-					<match url="^([A-J])([0-9]{2})([a-g]).meak$" />
-					<action type="Rewrite" url="/§{R:1}[{R:2}][{R:3}]" />
+				<rule name="reader-episode" stopProcessing="true">
+					<match url="^([A-J])(\d{2}).meak$" />
+					<action type="Rewrite" url="/{R:1}-{R:2}" />
+				</rule>
+				<rule name="reader-scene" stopProcessing="true">
+					<match url="^([A-J])(\d{2})([a-g]).meak$" />
+					<action type="Rewrite" url="/{R:1}-{R:2}-{R:3}" />
 				</rule>
 			</rules>
 		</rewrite>
