--- a/Site/Structure/Structure.csproj
+++ b/Site/Structure/Structure.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="Helpers\Config.cs" />
     <Compile Include="Helpers\Countdown.cs" />
+    <Compile Include="Helpers\RouteStories.cs" />
     <Compile Include="Helpers\StoriesException.cs" />
     <Compile Include="Helpers\UrlUserType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
