characters: add Mel and Bea

--- a/translator/config.json
+++ b/translator/config.json
@@ -91,6 +91,14 @@
 			{
 				"oldValue": "N",
 				"newValue": "Dilan"
+			},
+			{
+				"oldValue": "L",
+				"newValue": "Mel"
+			},
+			{
+				"oldValue": "C",
+				"newValue": "Beatrice"
 			}
 		],
 		"verifications": [
