[SITE] print: make the printed page looks like a page
Remove unnecessary items and add header and footer.

The page count start is for the entire season, so it should start from
where the other episode stopped.

--- a/Site/Presentation/Presentation.csproj
+++ b/Site/Presentation/Presentation.csproj
@@ -244,6 +244,7 @@
     <None Include="Properties\PublishProfiles\Arvixe.pubxml" />
     <None Include="Properties\PublishProfiles\Stories - Local.pubxml" />
     <Content Include="Views\Upload\Upload.cshtml" />
+    <Content Include="Views\Season\PrintHeaderAndFooter.cshtml" />
     <None Include="Web.Amazon.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
