--- a/Site/Presentation/Presentation.csproj
+++ b/Site/Presentation/Presentation.csproj
@@ -245,6 +245,7 @@
     <None Include="Properties\PublishProfiles\Stories - Local.pubxml" />
     <Content Include="Views\Upload\Upload.cshtml" />
     <Content Include="Views\Season\Partial\PrintHeaderAndFooter.cshtml" />
+    <Content Include="Views\Season\Partial\PrintSummary.cshtml" />
     <None Include="Web.Amazon.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
