[SITE] accessibility: remove colors from texts
Using other types of formatting but color to show differences on text.

Removed two not necessary talk paragraph types.

--- a/Site/Presentation/Presentation.csproj
+++ b/Site/Presentation/Presentation.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\SeasonController.cs" />
     <Compile Include="Controllers\UploadController.cs" />
+    <Compile Include="Helpers\Dic.cs" />
     <Compile Include="Models\UploadModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
