[SITE] audio: add link to pieces

--- a/Site/Presentation/Web.config
+++ b/Site/Presentation/Web.config
@@ -2,10 +2,14 @@
 <configuration>
 	<appSettings file="login.config">
 		<add key="webpages:Version" value="3.0.0.0" />
+
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
 		<add key="Stories" value="..\..\..\Stories\" />
 		<add key="Messages" value="Messages" />
+
+		<add key="Repo" value="darakeon/meak" />
 
 		<add key="aspnet:MaxHttpCollectionKeys" value="5000" />
 	</appSettings>
