[SITE] chore: rename Scene to Block - part I
The scene is a sequence passed over a time, without breaks. The parts
of an episode are actually blocks.

This commit is divided in two parts because if it is made whole at one
time, git will break the history of files.

--- a/Site/Presentation/Presentation.csproj
+++ b/Site/Presentation/Presentation.csproj
@@ -169,7 +169,7 @@
     <Content Include="Assets\css\screen_Menu.css" />
     <Content Include="Assets\css\screen_Navigation.css" />
     <Content Include="Assets\css\screen_Resize.css" />
-    <Content Include="Assets\css\screen_Scene.css" />
+    <Content Include="Assets\css\screen_Block.css" />
     <Content Include="Assets\css\screen_Site.css" />
     <Content Include="Assets\css\Season.css" />
     <Content Include="Assets\images\arms.gif" />
@@ -203,7 +203,7 @@
     <Content Include="Assets\js\lib\Scale.js" />
     <Content Include="Assets\js\lib\StringExtension.js" />
     <Content Include="Assets\js\Menu.js" />
-    <Content Include="Assets\js\SceneChanger.js" />
+    <Content Include="Assets\js\BlockChanger.js" />
     <Content Include="Assets\js\Trigger.js" />
     <Content Include="Global.asax" />
     <Content Include="Messages\2013-05-09.json" />
@@ -215,7 +215,7 @@
     <Content Include="Views\Season\Author\AddEpisode.cshtml" />
     <Content Include="Views\Season\Author\Episode.cshtml" />
     <Content Include="Views\Season\Author\Paragraph.cshtml" />
-    <Content Include="Views\Season\Author\Scene.cshtml" />
+    <Content Include="Views\Season\Author\Block.cshtml" />
     <Content Include="Views\Season\Author\TalkPiece.cshtml" />
     <Content Include="Views\Season\Author\TellerPiece.cshtml" />
     <Content Include="Views\Season\Episode.cshtml" />
@@ -223,7 +223,7 @@
     <Content Include="Views\Season\Suggestion.cshtml" />
     <Content Include="Views\Season\Summary.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Season\Partial\ChangeScene.cshtml" />
+    <Content Include="Views\Season\Partial\ChangeBlock.cshtml" />
     <Content Include="Views\Shared\Partial\Css.cshtml" />
     <Content Include="Views\Shared\Partial\Js.cshtml" />
     <Content Include="Views\Shared\Partial\Legend.cshtml" />
