--- a/Site/Presentation/Web.config
+++ b/Site/Presentation/Web.config
@@ -48,7 +48,7 @@
 					<match url="^([A-J])(\d{2}).meak$" />
 					<action type="Rewrite" url="/{R:1}-{R:2}" />
 				</rule>
-				<rule name="reader-scene" stopProcessing="true">
+				<rule name="reader-block" stopProcessing="true">
 					<match url="^([A-J])(\d{2})([a-g]).meak$" />
 					<action type="Rewrite" url="/{R:1}-{R:2}-{R:3}" />
 				</rule>
