--- a/Site/Structure/Structure.csproj
+++ b/Site/Structure/Structure.csproj
@@ -129,6 +129,7 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Audio.cs" />
     <Compile Include="Data\FtpHelper.cs" />
     <Compile Include="Data\MessageJson.cs" />
     <Compile Include="Data\EpisodeJson.cs" />
