[SITE] security: add https

--- a/Site/Presentation/Presentation.csproj
+++ b/Site/Presentation/Presentation.csproj
@@ -239,6 +239,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="login.config" />
+    <None Include="Properties\PublishProfiles\Amazon 2019.pubxml" />
     <None Include="Properties\PublishProfiles\Amazon.pubxml" />
     <None Include="Properties\PublishProfiles\Arvixe.pubxml" />
     <None Include="Properties\PublishProfiles\Stories - Local.pubxml" />
