--- a/Site/Presentation/Web.config
+++ b/Site/Presentation/Web.config
@@ -35,6 +35,21 @@
 	<system.webServer>
 		<validation validateIntegratedModeConfiguration="false" />
 
+		<handlers>
+			<add name="Let's Encrypt"
+			     path=".well-known/acme-challenge/*"
+			     verb="*"
+			     modules="StaticFileModule"
+			     resourceType="Either"
+			     requireAccess="Read" />
+		</handlers>
+
+		<httpProtocol>
+			<customHeaders>
+				<add name="X-Frame-Options" value="DENY" />
+			</customHeaders>
+		</httpProtocol>
+
 		<rewrite>
 			<rules>
 				<rule name="reader-season" stopProcessing="true">
