--- a/Site/Presentation/Web.Amazon.config
+++ b/Site/Presentation/Web.Amazon.config
@@ -8,5 +8,20 @@
 		<add key="Login" xdt:Transform="Remove" xdt:Locator="Match(key)" />
 		<add key="Pass" xdt:Transform="Remove" xdt:Locator="Match(key)" />
 	</appSettings>
-	
+
+	<system.webServer>
+		<rewrite>
+			<rules>
+				<rule name="Redirect to https" enabled="true" stopProcessing="true" xdt:Transform="Insert">
+					<match url="(.*)" />
+					<conditions logicalGrouping="MatchAll">
+						<add input="{HTTPS}" pattern="off" ignoreCase="true" />
+						<add input="{REQUEST_URI}" negate="true" pattern="^/.well-known/acme-challenge/*" ignoreCase="true" />
+					</conditions>
+					<action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" appendQueryString="true" />
+				</rule>
+			</rules>
+		</rewrite>
+	</system.webServer>
+
 </configuration>
