--- a/Site/.editorconfig
+++ b/Site/.editorconfig
@@ -3,3 +3,5 @@ indent_style = tab
 indent_size = 4
 insert_final_newline = true
 end_of_line = lf
+trim_trailing_whitespace = true
+max_line_length = 72
