--- a/Site/Structure/Structure.csproj
+++ b/Site/Structure/Structure.csproj
@@ -132,6 +132,10 @@
     <Compile Include="Data\Audio.cs" />
     <Compile Include="Data\FtpHelper.cs" />
     <Compile Include="Data\EpisodeJson.cs" />
+    <Compile Include="Printer\CharMap.cs" />
+    <Compile Include="Printer\CharsEpisode.cs" />
+    <Compile Include="Printer\ParagraphMap.cs" />
+    <Compile Include="Printer\Printer.cs" />
     <Compile Include="Entities\Json\SummaryPart.cs" />
     <Compile Include="Entities\Json\Piece.cs" />
     <Compile Include="Entities\Json\Paragraph.cs" />
@@ -143,7 +147,7 @@
     <Compile Include="Data\MainInfoJson.cs" />
     <Compile Include="Entities\System\Block.cs" />
     <Compile Include="Entities\System\Episode.cs" />
-    <Compile Include="Extensions\EnumExtension.cs" />
+    <Compile Include="Extensions\EnumX.cs" />
     <Compile Include="Enums\OpenEpisodeOption.cs" />
     <Compile Include="Enums\TalkStyle.cs" />
     <Compile Include="Enums\TellerStyle.cs" />
@@ -161,12 +165,64 @@
     <Compile Include="Helpers\RouteStories.cs" />
     <Compile Include="Helpers\StoriesException.cs" />
     <Compile Include="Helpers\UrlUserType.cs" />
+    <Compile Include="Printer\StyleMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\GeneralAssemblyInfo.cs" />
     <Compile Include="Version.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Printer\talk-arrive.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\talk-default.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\talk-frizz.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\talk-ghost.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\talk-hushed.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\talk-irony.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\talk-out.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\talk-read.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\talk-screamed.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\talk-teller.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\talk-thought.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\talk-translate.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\teller-default.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\teller-division.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\teller-first.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\teller-letter.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Printer\teller-trigger.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
