--- a/site/Presentation/Presentation.csproj
+++ b/site/Presentation/Presentation.csproj
@@ -38,7 +38,7 @@
     <None Remove="Assets\images\facebook_capa.png" />
     <None Remove="Assets\images\facebook_perfil.png" />
     <None Remove="Assets\images\favicon.png" />
-    <None Remove="Assets\images\fundo.png" />
+    <None Remove="Assets\images\fundo.gif" />
     <None Remove="Assets\images\logo.png" />
     <None Remove="Assets\images\matrix\arms_c.png" />
     <None Remove="Assets\images\matrix\arms_pb.png" />
@@ -167,7 +167,7 @@
     <Content Include="Assets\images\favicon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Assets\images\fundo.png">
+    <Content Include="Assets\images\fundo.gif">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\images\logo.png">
