--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,13 @@ jobs:
           command: trufflehog --exclude_paths trufflehog/exclude-patterns.txt --allow trufflehog/allow.json .
 
   docker:
-    machine: true
+    docker:
+      - image: docker
     steps:
       - checkout
+      - setup_remote_docker:
+          version: 20.10.11
+          docker_layer_caching: true
       - run:
           name: Build
           command: docker build . -t darakeon/mebrak -f docker/mebrak.dockerfile
