docker: expose port and detach to run

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -7,7 +7,7 @@ push: build
 	@docker push darakeon/mebrak
 
 run: build
-	@docker run --name mebrak --rm darakeon/mebrak
+	@docker run --name mebrak -p 2703:2703 -d --rm darakeon/mebrak
 
 enter: build
 	@docker run --name mebrak -it --rm darakeon/mebrak bash
