docker: show logs at run

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -8,6 +8,8 @@ push: build
 
 run: build
 	@docker run --name mebrak -p 2703:2703 -d --rm darakeon/mebrak
+	@sleep 3
+	@docker logs mebrak
 
 enter: build
 	@docker run --name mebrak -it --rm darakeon/mebrak bash
